--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.devtools.livereload.enabled=true
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.cache=true
-spring.thymeleaf.check-template-location=true
-spring.thymeleaf.enabled=true
+#spring.jpa.show_sql=true
+#
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:testdb
 
-spring.datasource.url=jdbc:mysql://localhost:3306/noticeboard?serverTimezone=UTC&useSSL=false&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=0000
+spring.datasource.url=jdbc:mysql://localhost:3306/noticeboard_db
+spring.datasource.username=noticeboard
+spring.datasource.password=noticeboard1234!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
