--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+
+	implementation 'org.springframework.security:spring-security-test'
+
 }
 
 tasks.named('test') {
