--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 #spring.datasource.driver-class-name=org.h2.Driver
 #spring.datasource.url=jdbc:h2:mem:testdb
 
+#MySQL ?????? ?? ??
 spring.datasource.url=jdbc:mysql://localhost:3306/noticeboard_db
 spring.datasource.username=noticeboard
 spring.datasource.password=noticeboard1234!
@@ -13,3 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.security.user.name=admin
+spring.security.user.password=admin
