--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,18 +3,28 @@
 #spring.datasource.driver-class-name=org.h2.Driver
 #spring.datasource.url=jdbc:h2:mem:testdb
 
-#MySQL ?????? ?? ??
+
+
+##MySQL ?????? ?? ??
+#spring.datasource.url=jdbc:mysql://localhost:3306/noticeboard_db
+#spring.datasource.username=noticeboard
+#spring.datasource.password=noticeboard1234!
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.hibernate.ddl-auto=update
+#
+#
+#spring.jpa.show-sql=true
+##spring.jpa.hibernate.ddl-auto=create
+#
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.security.user.name=admin
+#spring.security.user.password=admin
+
 spring.datasource.url=jdbc:mysql://localhost:3306/noticeboard_db
 spring.datasource.username=noticeboard
 spring.datasource.password=noticeboard1234!
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=update
-
-
-spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
-
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.security.user.name=admin
-spring.security.user.password=admin
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
